<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:contentDescription="@string/todo"

        android:contextClickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/best_bucket_log" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/product_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/product_description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:background="#DCB8AD"
            android:text="@string/brand" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>